tests/valid/simple_typed.alu
function () do
begin
int x = 5;
bool flag = true;
string name = "Alice";
end
test
