tests/invalid/type_mismatch.alu
function () do
begin
int x = true;
end
test
